Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
   <div class="board-container">
     <header class="board-header">
       <div>
-        <div class="board-title">Mohan Departures</div>
+        <div class="board-title">Seneh Family Board</div>
         <div class="board-subtitle">Live countdown of your events (driven by Google Sheets)</div>
       </div>
       <div class="last-updated">
@@ -706,3 +706,4 @@
   </script>
 </body>
 </html>
+
