Update print statement to say 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -138,10 +138,16 @@
       width: 18%;
     }
 
-    .col-countdown {
-      width: 16%;
-      font-weight: 700;
-    }
+   .col-countdown {
+  width: 18%;
+  font-weight: 900;
+  font-size: 22px;
+  text-align: right;
+  letter-spacing: 0.03em;
+  color: #fefce8; /* soft warm airport-yellow */
+  font-family: "JetBrains Mono", ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
+}
+
 
     .col-status {
       width: 12%;
@@ -731,6 +737,7 @@
   </script>
 </body>
 </html>
+
 
 
 
