Update greeting from 'Hello World' to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
     <header class="board-header">
       <div>
         <div class="board-title">Seneh Family Board</div>
-        <div class="board-subtitle">Live countdown of events</div>
+        <div class="board-subtitle">Live countdown of events powered by the Senehangs</div>
       </div>
       <div class="last-updated">
         <div id="last-updated-label">Last updated:</div>
@@ -788,6 +788,7 @@
   </script>
 </body>
 </html>
+
 
 
 
