--- a/index.html
+++ b/index.html
@@ -167,12 +167,15 @@
       background: #020617;
     }
 
-    .badge-work { border-color: #38bdf8; color: #bae6fd; }
-    .badge-family { border-color: #22c55e; color: #bbf7d0; }
-    .badge-travel { border-color: #facc15; color: #fef9c3; }
-    .badge-study { border-color: #a855f7; color: #e9d5ff; }
-    .badge-health { border-color: #f97316; color: #fed7aa; }
-    .badge-social { border-color: #ec4899; color: #f9a8d4; }
+    /* Outlook category-style colours */
+    .badge-ol-blue    { border-color: #60a5fa; color: #bfdbfe; }
+    .badge-ol-green   { border-color: #22c55e; color: #bbf7d0; }
+    .badge-ol-red     { border-color: #f97373; color: #fecaca; }
+    .badge-ol-yellow  { border-color: #facc15; color: #fef9c3; }
+    .badge-ol-orange  { border-color: #fb923c; color: #fed7aa; }
+    .badge-ol-purple  { border-color: #a855f7; color: #e9d5ff; }
+    .badge-ol-teal    { border-color: #14b8a6; color: #99f6e4; }
+    .badge-ol-grey    { border-color: #6b7280; color: #e5e7eb; }
 
     .status-pill {
       display: inline-flex;
@@ -284,7 +287,7 @@
       background: #111827;
     }
 
-       /* Tablets / small laptops */
+    /* Tablets / small laptops */
     @media (max-width: 900px) {
       .board-container {
         padding: 10px;
@@ -305,66 +308,54 @@
       }
     }
 
-   /* Phones (iPhone etc.) — super minimal mode */
-@media (max-width: 600px) {
-  .board-container {
-    padding: 8px;
-  }
+    /* Phones (iPhone etc.) — super minimal mode */
+    @media (max-width: 600px) {
+      .board-container {
+        padding: 8px;
+      }
 
-  .board-title {
-    font-size: 16px;
-    letter-spacing: 0.12em;
-  }
+      .board-title {
+        font-size: 16px;
+        letter-spacing: 0.12em;
+      }
 
-  .board-subtitle {
-    display: none; /* hide subtitle on tiny screens */
-  }
+      .board-subtitle {
+        display: none; /* hide subtitle on tiny screens */
+      }
 
-  th, td {
-    padding: 5px 4px;
-    font-size: 11px;
-  }
+      th, td {
+        padding: 5px 4px;
+        font-size: 11px;
+      }
 
-  /* Hide ALL except Event, Start, Countdown */
-  .col-location,
-  .col-category,
-  .col-status {
-    display: none;
-  }
+      /* Hide ALL except Event, Start, Countdown */
+      .col-location,
+      .col-category,
+      .col-status {
+        display: none;
+      }
 
-  /* Resize remaining columns */
-  .col-title {
-    width: 45%;
-  }
+      /* Resize remaining columns */
+      .col-title {
+        width: 45%;
+      }
 
-  .col-start {
-    width: 25%;
-  }
+      .col-start {
+        width: 25%;
+      }
 
-    .col-countdown {
-    width: 30%;
-    font-size: 12px;
-    text-align: right;
-    letter-spacing: 0.01em;
-  }
+      .col-countdown {
+        width: 30%;
+        font-size: 12px;
+        text-align: right;
+        letter-spacing: 0.01em;
+      }
 
-
-  /* Status pills can fully vanish */
-  .status-pill {
-    display: none !important;
-  }
-}
-
-    /* Countdown auto-fit support */
-.countdown-auto {
-  display: inline-block;
-  max-width: 100%;
-  white-space: nowrap;
-  transform-origin: right center;
-}
-
-
-
+      /* Status pills can fully vanish */
+      .status-pill {
+        display: none !important;
+      }
+    }
   </style>
 </head>
 <body>
@@ -372,7 +363,7 @@
     <header class="board-header">
       <div>
         <div class="board-title">Seneh Family Board</div>
-        <div class="board-subtitle">Live countdown of events powered by the Senehangs</div>
+        <div class="board-subtitle">Live countdown of Outlook events</div>
       </div>
       <div class="last-updated">
         <div id="last-updated-label">Last updated:</div>
@@ -397,15 +388,15 @@
         </tbody>
       </table>
       <div id="empty-state" class="empty-state" style="display:none;">
-        <div>No active upcoming events found.</div>
+        <div>No upcoming Outlook events found.</div>
         <div style="font-size:12px; opacity:0.8;">
-          Make sure <strong>Active?</strong> is ticked and <strong>Start_ISO</strong> is populated in your sheet.
+          Add events to your calendar, or check that your published calendar has upcoming items.
         </div>
       </div>
       <div id="error-message" class="error-message" style="display:none;"></div>
       <div class="footer-bar">
         <div class="footer-left small-mono">
-          Source: Google Sheets CSV • Auto-refresh every 5 min
+          Source: Outlook.com Calendar (ICS) • Auto-refresh every 5 min
         </div>
         <div class="footer-right small-mono" id="clock">—</div>
       </div>
@@ -414,10 +405,10 @@
 
   <script>
     // === CONFIG ===
-    const CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSCiM892-0C52EcEXQ4rcNk2yADPStNOaf1zpf85leSMdTpXFaI9Hopj8kOEREO8mZEAYYvqSQsN3Ir/pub?gid=0&single=true&output=csv";
+    const ICS_URL = "https://outlook.live.com/owa/calendar/a2043dfe-fd99-411b-b5c3-6c70c2b8075e/b36a6462-c02b-4947-88bd-9759ac7eb658/cid-5AE6A858D7975245/calendar.ics";
     const REFRESH_INTERVAL_MS = 5 * 60 * 1000;
     const COUNTDOWN_UPDATE_MS = 1000;
-    const MAX_PAST_AGE_HOURS = 2;
+    const MAX_PAST_AGE_HOURS = 2; // how long to keep finished events visible
 
     let events = [];
     let countdownTimer = null;
@@ -432,129 +423,137 @@
     setInterval(updateClock, 1000);
     updateClock();
 
-    // CSV parser (handles quotes)
-    function parseCSV(text) {
-      const rows = [];
-      let row = [];
-      let current = "";
-      let inQuotes = false;
+    // --- ICS parsing helpers ---
 
-      for (let i = 0; i < text.length; i++) {
-        const char = text[i];
-        const next = text[i + 1];
-
-        if (char === '"' && !inQuotes) {
-          inQuotes = true;
-        } else if (char === '"' && inQuotes) {
-          if (next === '"') {
-            current += '"';
-            i++;
-          } else {
-            inQuotes = false;
-          }
-        } else if (char === ',' && !inQuotes) {
-          row.push(current);
-          current = "";
-        } else if ((char === '\n' || char === '\r') && !inQuotes) {
-          if (current !== "" || row.length > 0) {
-            row.push(current);
-            rows.push(row);
-            row = [];
-            current = "";
+    function unfoldICSLines(text) {
+      const rawLines = text.split(/\r\n|\n|\r/);
+      const lines = [];
+      for (let i = 0; i < rawLines.length; i++) {
+        const line = rawLines[i];
+        if (!line) continue;
+        if (line[0] === " " || line[0] === "\t") {
+          // continuation of previous line
+          if (lines.length > 0) {
+            lines[lines.length - 1] += line.slice(1);
           }
         } else {
-          current += char;
+          lines.push(line);
+        }
+      }
+      return lines;
+    }
+
+    function parseICSDate(val) {
+      // Handles:
+      // - 20251115T190000Z
+      // - 20251115T190000
+      // - 20251115 (all day)
+      if (!val) return null;
+
+      const dateTimeMatch = val.match(/^(\d{4})(\d{2})(\d{2})T(\d{2})(\d{2})(\d{2})(Z)?$/);
+      if (dateTimeMatch) {
+        const [_, y, m, d, hh, mm, ss, z] = dateTimeMatch;
+        if (z === "Z") {
+          return new Date(Date.UTC(Number(y), Number(m) - 1, Number(d), Number(hh), Number(mm), Number(ss)));
+        } else {
+          return new Date(Number(y), Number(m) - 1, Number(d), Number(hh), Number(mm), Number(ss));
         }
       }
 
-      if (current !== "" || row.length > 0) {
-        row.push(current);
-        rows.push(row);
-      }
-      return rows;
-    }
-
-    function mapRowsToObjects(rows) {
-      if (!rows.length) return [];
-      const header = rows[0].map(h => h.trim());
-      const dataRows = rows.slice(1);
-
-      const colIndex = {};
-      header.forEach((name, idx) => {
-        colIndex[name] = idx;
-      });
-
-      const get = (row, key) => {
-        const idx = colIndex[key];
-        if (idx === undefined) return "";
-        return (row[idx] || "").trim();
-      };
-
-      const objects = dataRows
-        .filter(row => row.some(cell => cell && cell.trim() !== ""))
-        .map(row => {
-          const title = get(row, "Title");
-          if (!title) return null;
-
-          const category = get(row, "Category");
-          const location = get(row, "Location");
-          const startIso = get(row, "Start_ISO");
-          const endIso = get(row, "End_ISO");
-          const allDay = (get(row, "All Day?") || "").toUpperCase() === "TRUE";
-          const priority = get(row, "Priority");
-          const active = (get(row, "Active?") || "").toUpperCase() === "TRUE";
-
-          let startCombined = startIso;
-          if (!startCombined) {
-            const sd = get(row, "Start Date");
-            const st = get(row, "Start Time");
-            if (sd && st) startCombined = `${sd} ${st}`;
-          }
-
-          let endCombined = endIso;
-          if (!endCombined) {
-            const ed = get(row, "End Date");
-            const et = get(row, "End Time");
-            if (ed && et) endCombined = `${ed} ${et}`;
-          }
-
-          return {
-            title,
-            category,
-            location,
-            startText: startCombined,
-            endText: endCombined,
-            allDay,
-            priority,
-            active
-          };
-        })
-        .filter(Boolean);
-
-      return objects;
-    }
-
-    function parseLocalDateTime(dtStr) {
-      if (!dtStr) return null;
-
-      const isoMatch = dtStr.match(/^(\d{4})-(\d{2})-(\d{2})[ T](\d{2}):(\d{2})/);
-      if (isoMatch) {
-        const [_, y, m, d, hh, mm] = isoMatch;
-        return new Date(Number(y), Number(m) - 1, Number(d), Number(hh), Number(mm), 0, 0);
+      const dateOnlyMatch = val.match(/^(\d{4})(\d{2})(\d{2})$/);
+      if (dateOnlyMatch) {
+        const [_, y, m, d] = dateOnlyMatch;
+        return new Date(Number(y), Number(m) - 1, Number(d), 0, 0, 0);
       }
 
-      const parsed = new Date(dtStr);
-      if (!isNaN(parsed.getTime())) return parsed;
-
-      return null;
+      // Fallback
+      const parsed = new Date(val);
+      return isNaN(parsed.getTime()) ? null : parsed;
     }
+
+    function outlookCategoryClass(category) {
+      if (!category) return "";
+      const lower = category.trim().toLowerCase();
+
+      if (lower.startsWith("blue")) return "badge-ol-blue";
+      if (lower.startsWith("green")) return "badge-ol-green";
+      if (lower.startsWith("red")) return "badge-ol-red";
+      if (lower.startsWith("yellow")) return "badge-ol-yellow";
+      if (lower.startsWith("orange")) return "badge-ol-orange";
+      if (lower.startsWith("purple")) return "badge-ol-purple";
+      if (lower.startsWith("teal")) return "badge-ol-teal";
+      if (lower.startsWith("gray") || lower.startsWith("grey")) return "badge-ol-grey";
+
+      return ""; // default badge style
+    }
+
+    function parseICS(icsText) {
+      const lines = unfoldICSLines(icsText);
+      const events = [];
+      let current = null;
+
+      for (const line of lines) {
+        if (line === "BEGIN:VEVENT") {
+          current = {};
+        } else if (line === "END:VEVENT") {
+          if (current && current.dtstart) {
+            events.push(current);
+          }
+          current = null;
+        } else if (current) {
+          const sepIndex = line.indexOf(":");
+          if (sepIndex === -1) continue;
+          const keyPart = line.slice(0, sepIndex);
+          const value = line.slice(sepIndex + 1);
+
+          const key = keyPart.split(";")[0].toUpperCase();
+
+          switch (key) {
+            case "SUMMARY":
+              current.summary = value;
+              break;
+            case "LOCATION":
+              current.location = value;
+              break;
+            case "DESCRIPTION":
+              current.description = value;
+              break;
+            case "DTSTART":
+              current.dtstartRaw = value;
+              current.dtstart = parseICSDate(value);
+              break;
+            case "DTEND":
+              current.dtendRaw = value;
+              current.dtend = parseICSDate(value);
+              break;
+            case "CATEGORIES":
+              // could be comma-separated list, take first
+              current.categories = value.split(",").map(v => v.trim()).filter(Boolean);
+              break;
+            case "PRIORITY":
+              current.priorityRaw = value;
+              break;
+            case "STATUS":
+              current.statusRaw = value;
+              break;
+            default:
+              break;
+          }
+        }
+      }
+
+      return events;
+    }
+
+    // --- Formatting and status ---
 
     function formatDisplayStart(dt, allDay) {
       if (!dt) return "—";
       const pad = (n) => n.toString().padStart(2, "0");
       const date = `${pad(dt.getDate())}/${pad(dt.getMonth() + 1)}/${dt.getFullYear().toString().slice(-2)}`;
+      if (allDay) return `${date} (all day)`;
       const time = `${pad(dt.getHours())}:${pad(dt.getMinutes())}`;
-      return allDay ? `${date} (all day)` : `${date} ${time}`;
+      return `${date} ${time}`;
     }
 
     function computeStatus(now, start, end) {
@@ -571,39 +570,23 @@
       return { status: "PAST", code: "past" };
     }
 
-    // ALWAYS show seconds, with days if needed
-   function formatCountdown(diffMs) {
-  if (diffMs <= 0) return "0:00:00";
+    // Countdown format with seconds (compact)
+    function formatCountdown(diffMs) {
+      if (diffMs <= 0) return "0:00:00";
 
-  const totalSeconds = Math.floor(diffMs / 1000);
-  const days = Math.floor(totalSeconds / 86400);
-  const hours = Math.floor((totalSeconds % 86400) / 3600);
-  const minutes = Math.floor((totalSeconds % 3600) / 60);
-  const seconds = totalSeconds % 60;
+      const totalSeconds = Math.floor(diffMs / 1000);
+      const days = Math.floor(totalSeconds / 86400);
+      const hours = Math.floor((totalSeconds % 86400) / 3600);
+      const minutes = Math.floor((totalSeconds % 3600) / 60);
+      const seconds = totalSeconds % 60;
 
-  const pad2 = (n) => n.toString().padStart(2, "0");
+      const pad2 = (n) => n.toString().padStart(2, "0");
 
-  // Compact mobile-friendly format:
-  // If more than 1 day → 1d 3:44:55
-  if (days > 0) {
-    return `${days}d ${hours}:${pad2(minutes)}:${pad2(seconds)}`;
-  }
+      if (days > 0) {
+        return `${days}d ${hours}:${pad2(minutes)}:${pad2(seconds)}`;
+      }
 
-  // Under 1 day → 03:44:55
-  return `${hours}:${pad2(minutes)}:${pad2(seconds)}`;
-}
-
-
-    function categoryBadgeClass(category) {
-      if (!category) return "";
-      const c = category.trim().toLowerCase();
-      if (c === "work") return "badge-work";
-      if (c === "family") return "badge-family";
-      if (c === "travel") return "badge-travel";
-      if (c === "study") return "badge-study";
-      if (c === "health") return "badge-health";
-      if (c === "social") return "badge-social";
-      return "";
+      return `${hours}:${pad2(minutes)}:${pad2(seconds)}`;
     }
 
     function statusClass(code) {
@@ -614,6 +597,14 @@
         case "past": return "status-past";
         default: return "status-past";
       }
+    }
+
+    function priorityFromICS(priorityRaw) {
+      if (!priorityRaw) return "Medium";
+      const p = parseInt(priorityRaw, 10);
+      if (p === 1) return "High";
+      if (p >= 5) return "Low";
+      return "Medium";
     }
 
     function renderEvents() {
@@ -630,13 +621,17 @@
       const now = new Date();
 
       const enriched = events
-        .filter(e => e.active)
         .map(e => {
-          const start = parseLocalDateTime(e.startText);
-          const end = e.endText ? parseLocalDateTime(e.endText) : null;
+          const start = e.dtstart || null;
+          const end = e.dtend || null;
+          if (!start) return null;
+
+          // Treat VALUE=DATE (all-day) as allDay
+          const allDay = !!(e.dtstartRaw && e.dtstartRaw.length === 8);
+
           const status = computeStatus(now, start, end);
 
-          let sortTime = start ? start.getTime() : Infinity;
+          let sortTime = start.getTime();
           if (status.code === "ongoing" && end) sortTime = end.getTime();
 
           let ageOk = true;
@@ -646,9 +641,27 @@
             if (ageMs > maxAgeMs) ageOk = false;
           }
 
-          return { ...e, start, end, status, sortTime, ageOk };
+          // ignore cancelled events
+          if (e.statusRaw && e.statusRaw.toUpperCase() === "CANCELLED") ageOk = false;
+
+          const categoryName = e.categories && e.categories.length ? e.categories[0] : "";
+          const priority = priorityFromICS(e.priorityRaw);
+
+          return {
+            title: e.summary || "(no title)",
+            location: e.location || "",
+            categoryName,
+            categoryClass: outlookCategoryClass(categoryName),
+            start,
+            end,
+            allDay,
+            status,
+            sortTime,
+            ageOk,
+            priority
+          };
         })
-        .filter(e => e.ageOk && e.start)
+        .filter(e => e && e.ageOk)
         .sort((a, b) => a.sortTime - b.sortTime);
 
       if (!enriched.length) {
@@ -683,8 +696,8 @@
         const categoryTd = document.createElement("td");
         categoryTd.className = "col-category";
         const catSpan = document.createElement("span");
-        catSpan.className = "badge " + categoryBadgeClass(e.category || "");
-        catSpan.textContent = (e.category || "Other").toUpperCase();
+        catSpan.className = "badge " + e.categoryClass;
+        catSpan.textContent = (e.categoryName || "No category").toUpperCase();
         categoryTd.appendChild(catSpan);
 
         const startTd = document.createElement("td");
@@ -731,14 +744,14 @@
         const event = enriched[index];
         if (!event || !event.start) return;
 
-        // clear urgency classes
         td.classList.remove("countdown-soon", "countdown-urgent", "countdown-critical");
 
         const diffStart = event.start.getTime() - now.getTime();
         const status = computeStatus(now, event.start, event.end);
 
         if (status.code === "upcoming") {
-          td.textContent = formatCountdown(diffStart);
+          const text = formatCountdown(diffStart);
+          td.textContent = text;
 
           const totalSeconds = Math.floor(diffStart / 1000);
           if (totalSeconds <= 60) {
@@ -748,6 +761,9 @@
           } else if (totalSeconds <= 3600) {
             td.classList.add("countdown-soon");
           }
+        } else if (status.code === "ongoing" || status.code === "now") {
+          td.textContent = "NOW";
+          td.classList.add("countdown-critical");
         } else {
           td.textContent = "—";
         }
@@ -766,20 +782,19 @@
       errorEl.textContent = "";
 
       try {
-        const response = await fetch(CSV_URL + "&cacheBust=" + Date.now());
+        const response = await fetch(ICS_URL + (ICS_URL.includes("?") ? "&" : "?") + "cacheBust=" + Date.now());
         if (!response.ok) throw new Error("HTTP " + response.status);
 
         const text = await response.text();
-        const rows = parseCSV(text);
-        events = mapRowsToObjects(rows);
+        events = parseICS(text);
 
         renderEvents();
 
         document.getElementById("last-updated").textContent = new Date().toLocaleString();
       } catch (err) {
-        console.error("Error fetching/processing CSV:", err);
+        console.error("Error fetching/processing ICS:", err);
         errorEl.style.display = "block";
-        errorEl.textContent = "Error loading events from Google Sheets: " + err.message;
+        errorEl.textContent = "Error loading events from Outlook Calendar: " + err.message;
       }
     }
 
@@ -788,9 +803,3 @@
   </script>
 </body>
 </html>
-
-
-
-
-
-
