Update HTML content
Adjust displayed text in HTML file.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Seneh Life Event Board</title>
+  <title>Event Countdown Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     * {
@@ -358,7 +358,7 @@
   <div class="board-container">
     <header class="board-header">
       <div>
-        <div class="board-title">Seneh Event Board</div>
+        <div class="board-title">Event Countdown Board</div>
         <div class="board-subtitle">Live countdown of events</div>
       </div>
       <div class="last-updated">
@@ -771,5 +771,6 @@
   </script>
 </body>
 </html>
+
 
 
